--- a/app/src/main/res/layout/activity_gameroom.xml
+++ b/app/src/main/res/layout/activity_gameroom.xml
@@ -40,5 +40,5 @@
   <Button
           android:text="Button"
           android:layout_width="match_parent"
-          android:layout_height="match_parent" android:id="@+id/ "/>
+          android:layout_height="match_parent" android:id="@+id/button_temp"/>
 </LinearLayout>
