--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,28 +6,12 @@
     android:orientation="vertical">
 
   <TextView
+          android:text="Header"
           android:layout_width="match_parent"
-          android:layout_height="97dp" android:id="@+id/textView" android:layout_weight="1"
-          android:text="@string/app_name" android:textAlignment="center" android:textSize="60sp"/>
-  <Button
-          android:id="@+id/create_game_room"
+          android:layout_height="wrap_content" android:id="@+id/textView"/>
+  <FrameLayout
           android:layout_width="match_parent"
-          android:layout_height="50dp"
-          android:onClick="createGameRoom"
-          android:text="@string/create_room"
-          style="@style/Widget.AppCompat.Button.Colored" android:baselineAligned="false"/>
-  <Button
-          android:id="@+id/join_room"
-          android:layout_width="match_parent"
-          android:layout_height="188dp"
-          android:onClick="createGameRoom"
-          android:text="@string/join_room"
-          style="@style/Widget.AppCompat.Button.Colored" android:baselineAligned="false" android:layout_weight="1"/>
-  <EditText
-          android:id="@+id/name"
-          android:layout_width="match_parent"
-          android:layout_height="14dp"
-          android:layout_weight="1" android:inputType="text"
-          android:hint="@string/player_name"/>
+          android:layout_height="match_parent" android:id="@+id/placeholder">
 
+  </FrameLayout>
 </LinearLayout>
