--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,5 +18,7 @@
     <Button
             android:text="Start"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/start_button"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/start_button"
+            style="@style/Widget.AppCompat.Button.Colored"/>
 </LinearLayout>
