--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
           android:layout_height="wrap_content" android:id="@+id/textView"/>
   <FrameLayout
           android:layout_width="match_parent"
-          android:layout_height="match_parent" android:id="@+id/placeholder">
+          android:layout_height="match_parent" android:id="@+id/fragment_c">
 
   </FrameLayout>
 </LinearLayout>
