--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:padding="10dp"
-              android:orientation="vertical">
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:rowCount="2"
+    android:alignmentMode="alignBounds"
+    android:orientation="vertical"
+    android:layout_centerInParent="true"
+    android:padding="10dp">
 
     <Button
-            android:text="@string/create_room"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/create_button"/>
+        android:text="@string/create_room"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/create_button"
+        android:background="@color/red"
+        android:layout_rowWeight="1"
+        android:layout_gravity="fill"
+        android:layout_marginBottom="10dp"/>
+
     <Button
-            android:text="@string/join_room"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/join_button"/>
-</LinearLayout>
+        android:text="@string/join_room"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/join_button"
+        android:background="@color/green"
+        android:layout_rowWeight="1"
+        android:layout_gravity="fill_vertical"
+        android:layout_marginTop="10dp"/>
+</GridLayout>
