--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,24 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark">
 
-    <TextView
-            android:text="@string/app_name"
+    <GridLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:rowCount="3"
+        android:layout_centerInParent="true"
+        android:background="@color/colorPrimary"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="100dp"
+        android:padding="30dp">
+
+        <RelativeLayout
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/textView3"/>
-    <EditText
+            android:layout_rowWeight="2">
+            <TextView
+                android:text="Red Light"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView3"
+                android:textColor="@color/red"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textSize="60sp"/>
+            <TextView
+                android:text="Green Light"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView4"
+                android:textColor="@color/green"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textSize="60sp"
+                android:layout_below="@+id/textView3"/>
+        </RelativeLayout>
+
+
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:text="Name"
             android:ems="10"
-            android:id="@+id/name" android:hint="@string/player_name"/>
-    <Button
-            android:text="Start"
+            android:id="@+id/name"
+            android:hint="@string/player_name"
+            android:background="@color/disabled"
+            android:textAlignment="center"
+            android:layout_rowWeight="1"
+            android:layout_marginBottom="10dp"/>
+
+        <Button
+            android:text="Start Game!"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/start_button"
-            style="@style/Widget.AppCompat.Button.Colored"/>
-</LinearLayout>
+            android:background="@color/green"
+            android:layout_rowWeight="3"
+            android:textSize="50sp"/>
+
+    </GridLayout>
+
+</RelativeLayout>
