--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,7 +15,8 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="100dp"
-        android:padding="30dp">
+        android:padding="30dp"
+        android:outlineAmbientShadowColor="@color/disabled">
 
         <ImageView
             android:src="@drawable/logo"
@@ -28,9 +29,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:ems="10"
+            android:textSize="20sp"
             android:id="@+id/name"
             android:hint="@string/player_name"
+            android:textColorHint="@color/colorPrimaryLight"
+            android:textColor="@color/colorSecondaryLight"
             android:background="@color/disabled"
             android:textAlignment="center"
             android:layout_rowWeight="2"
@@ -41,9 +44,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/start_button"
-            android:background="@color/green"
-            android:layout_rowWeight="3"
-            android:textSize="50sp"/>
+            android:background="@drawable/button_custom"
+            android:layout_rowWeight="1"
+            android:textSize="35sp"
+            android:layout_marginTop="20dp"
+            android:shadowColor="@color/disabled"
+            android:textColor="@color/colorPrimaryDark"/>
 
     </GridLayout>
 
