--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark">
 
-  <TextView
-          android:text="Header"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content" android:id="@+id/textView"/>
+  <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:src="@drawable/logo"
+      android:background="@color/colorPrimaryLight"
+      android:layout_margin="10dp"
+      android:layout_gravity="center"
+      android:adjustViewBounds="true"
+      android:maxWidth="100dp"
+      android:maxHeight="100dp"
+      android:scaleType="fitCenter" />
+
   <FrameLayout
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" android:id="@+id/fragment_c">
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/fragment_c">
 
   </FrameLayout>
 </LinearLayout>
