--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -49,7 +49,8 @@
             android:textSize="35sp"
             android:layout_marginTop="20dp"
             android:shadowColor="@color/disabled"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textColor="@color/colorSecondaryDark"
+            android:enabled="false"/>
 
     </GridLayout>
 
