--- a/app/src/main/res/layout/gameroom_fragment.xml
+++ b/app/src/main/res/layout/gameroom_fragment.xml
@@ -6,15 +6,19 @@
               android:orientation="vertical" android:id="@+id/lin_layout">
 
   <Button
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content" android:id="@+id/broadcast" android:text="@string/start_searching"/>
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/broadcast"
+      android:text="@string/start_searching"
+      android:background="@drawable/button_custom"/>
   <TextView
       android:text="@string/connected_user"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/textView2"
       android:textSize="24sp"
-      android:background="@color/colorSecondary"/>
+      android:textAlignment="center"
+      android:background="@color/colorPrimaryLight"/>
   <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
