--- a/app/src/main/res/layout/join_room.xml
+++ b/app/src/main/res/layout/join_room.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent">
 
     <Button
-            android:text="Button"
+            android:text="Start Finding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/find_room"/>
 </LinearLayout>
