--- a/app/src/main/res/layout/gameroom_fragment.xml
+++ b/app/src/main/res/layout/gameroom_fragment.xml
@@ -1,53 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:layout_margin="16dp"
-              android:orientation="vertical" android:id="@+id/lin_layout">
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/lin_layout"
+    android:orientation="vertical"
+    android:rowCount="3">
 
   <Button
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       android:id="@+id/broadcast"
       android:text="@string/start_searching"
-      android:background="@drawable/button_custom"/>
-  <TextView
-      android:text="@string/connected_user"
+      android:background="@drawable/button_custom"
+      android:layout_rowWeight="1"/>
+
+
+  <GridLayout
+      android:orientation="vertical"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/textView2"
-      android:textSize="24sp"
-      android:textAlignment="center"
-      android:background="@color/colorPrimaryLight"/>
-  <LinearLayout
-          android:orientation="vertical"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content" android:id="@+id/player_list">
+      android:layout_height="0dp"
+      android:alignmentMode="alignBounds"
+      android:columnCount="2"
+      android:rowCount="3"
+      android:id="@+id/player_list"
+      android:layout_rowWeight="4"
+      android:background="@color/colorPrimary">
+      <TextView
+          android:text="@string/connected_user"
+          android:layout_width="0dp"
+          android:layout_height="0dp"
+          android:id="@+id/textView2"
+          android:textSize="24sp"
+          android:textAlignment="center"
+          android:layout_columnWeight="5"
+          android:layout_rowWeight="1"
+          android:layout_gravity="fill"
+          />
     <Button
-            android:text="@string/empty_slot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/player1"/>
+        android:text="@string/empty_slot"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/player1"
+        android:layout_columnWeight="5"
+        android:layout_rowWeight="4"
+        android:layout_gravity="fill"
+        />
     <Button
-            android:text="@string/empty_slot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/player2"/>
+        android:text="@string/empty_slot"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/player2"
+        android:layout_columnWeight="5"
+        android:layout_rowWeight="4"
+        android:layout_gravity="fill"
+        />
     <Button
-            android:text="@string/empty_slot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/player3"/>
+        android:text="@string/empty_slot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/player3"
+        android:layout_columnWeight="3"
+        android:layout_rowWeight="1"
+        android:layout_gravity="fill"
+        />
     <Button
-            android:text="@string/empty_slot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/player4"/>
+        android:text="@string/empty_slot"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/player4"
+        android:layout_columnWeight="3"
+        android:layout_rowWeight="4"
+        android:layout_gravity="fill"
+        />
     <Button
-            android:text="@string/empty_slot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/player5"/>
-  </LinearLayout>
+        android:text="@string/empty_slot"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/player5"
+        android:layout_columnWeight="3"
+        android:layout_rowWeight="4"
+        android:layout_gravity="fill"
+        />
+  </GridLayout>
   <Button
       android:text="Green"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="0dp"
       android:id="@+id/button_change"
-      android:background="@color/green"/>
-</LinearLayout>
+      android:background="@color/green"
+      android:layout_rowWeight="8"/>
+</GridLayout>
