--- a/app/src/main/res/layout/join_room.xml
+++ b/app/src/main/res/layout/join_room.xml
@@ -8,4 +8,8 @@
             android:text="Start Finding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/find_room"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/roomName"/>
 </LinearLayout>
