--- a/app/src/main/res/layout/join_room.xml
+++ b/app/src/main/res/layout/join_room.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <Button
-            android:text="Start Finding"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/find_room"/>
+        android:text="Start Finding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/find_room"
+        android:background="@drawable/button_custom"
+        android:layout_centerInParent="true"/>
+
     <TextView
-            android:text="TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/roomName"/>
-</LinearLayout>
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/roomName"
+        android:layout_below="@+id/find_room"/>
+
+</RelativeLayout>
