--- a/app/src/main/res/layout/join_room.xml
+++ b/app/src/main/res/layout/join_room.xml
@@ -10,13 +10,19 @@
         android:layout_height="wrap_content"
         android:id="@+id/find_room"
         android:background="@drawable/button_custom"
+        android:layout_above="@+id/roomName"
         android:layout_centerInParent="true"/>
 
     <TextView
-        android:text="TextView"
-        android:layout_width="match_parent"
+        android:text="Not in Room"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/roomName"
-        android:layout_below="@+id/find_room"/>
+        android:textSize="40sp"
+        android:textAlignment="center"
+        android:layout_marginTop="20sp"
+        android:padding="20sp"
+        android:background="@color/colorPrimary"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
