--- a/app/src/main/res/layout/join_room.xml
+++ b/app/src/main/res/layout/join_room.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" android:id="@+id/backgrounder">
 
     <Button
-        android:text="Start Finding"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/find_room"
-        android:background="@drawable/button_custom"
-        android:layout_above="@+id/roomName"
-        android:layout_centerInParent="true"/>
+            android:text="Start Finding"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/find_room"
+            android:background="@drawable/button_custom"
+            android:layout_above="@+id/roomName"
+            android:layout_centerInParent="true"/>
 
     <TextView
-        android:text="Not in Room"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/roomName"
-        android:textSize="40sp"
-        android:textAlignment="center"
-        android:layout_marginTop="20sp"
-        android:padding="20sp"
-        android:background="@color/colorPrimary"
-        android:layout_centerInParent="true"/>
+            android:text="Not in Room"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/roomName"
+            android:textSize="40sp"
+            android:textAlignment="center"
+            android:layout_marginTop="20sp"
+            android:padding="20sp"
+            android:background="@color/colorPrimary"
+            android:layout_centerInParent="true"/>
 
 </RelativeLayout>
